# region-to-share

./: .gitignore  .prettierignore  .snapcraft-ignore  .snapignore  BUILD.md  Cargo.toml  LICENSE  MANIFEST.in  Makefile  README.md  SNAP_README.md  SYSTEM_DEPENDENCIES.md  debug-script.sh  debug_infos.md  io.github.solarpush.RegionToShare.desktop  io.github.solarpush.RegionToShare.local.yml  io.github.solarpush.RegionToShare.metainfo.xml  io.github.solarpush.RegionToShare.yml  main.js  makefile  overlay.html  package-lock.json  package.json  pyproject.toml  region-to-share.desktop  requirements-dev.txt  requirements.txt  run.sh  run_venv.sh  setup.py  setup_venv.sh  snapcraft.yaml
.github/: FUNDING.yml
crates/region-capture/: Cargo.toml
crates/region-capture/src/: backend.rs
crates/region-capture/src/x11/: cursor.rs  mod.rs  shm.rs
crates/region-config/src/: lib.rs
crates/region-core/: Cargo.toml
crates/region-core/src/: error.rs  lib.rs  performance.rs
crates/region-portal/: Cargo.toml
crates/region-portal/src/: dmabuf_import.rs  lib.rs  pipewire.rs  portal.rs  stream.rs
crates/region-ui-egui/: Cargo.toml
crates/region-ui-egui/locales/: en.yaml  fr.yaml
crates/region-ui-egui/src/: main.rs
region_to_share/: __init__.py  config.py  debug.py  display_window.py  frame_profiler.py  main.py  mutter_screencast.py  portal_screencast.py  screen_selector.py  settings_dialog.py  universal_capture.py
rust-implementation/: .gitignore  BUILD.md  Cargo.toml  README.md  TODO.md  snapcraft.yaml
rust-implementation/crates/region-capture/: Cargo.toml
rust-implementation/crates/region-capture/src/: auto.rs  frame.rs  lib.rs
rust-implementation/crates/region-capture/src/x11/: cursor.rs  mod.rs  shm.rs
rust-implementation/crates/region-config/: Cargo.toml
rust-implementation/crates/region-config/src/: lib.rs
rust-implementation/crates/region-core/src/: config.rs  geometry.rs
rust-implementation/crates/region-portal/: Cargo.toml
rust-implementation/crates/region-portal/src/: dmabuf_import.rs  lib.rs  pipewire.rs  portal.rs  stream.rs
rust-implementation/crates/region-ui-egui/: Cargo.toml
rust-implementation/crates/region-ui-egui/src/: main.rs
