[workspace]
resolver = "2"
members = [
    "crates/region-core",
    "crates/region-capture",
    "crates/region-portal",
    "crates/region-config",
    "crates/region-ui-egui",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Pierre Solar <pierre@solarpush.dev>"]
license = "MIT"
repository = "https://github.com/solarpush/region-to-share"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Portal/Wayland
ashpd = { version = "0.9", features = ["pipewire"] }
zbus = "4.0"

# PipeWire
pipewire = "0.8"
libspa = "0.8"

# X11
x11rb = { version = "0.13", features = ["shm", "xfixes", "render", "randr", "cursor"] }

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "5"

# Logging/Error handling
tracing = "0.1"
anyhow = "1"
thiserror = "1"

# Internal workspace crates
region-core = { path = "crates/region-core" }
region-capture = { path = "crates/region-capture" }
region-portal = { path = "crates/region-portal" }
region-config = { path = "crates/region-config" }

# System
libc = "0.2"

# Keyboard shortcuts (global hotkeys)
global-hotkey = "0.6"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
