[package]
name = "region-capture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
region-core = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
libc = { workspace = true }
log = "0.4"

# Optional backends
x11rb = { workspace = true, optional = true }
pipewire = { workspace = true, optional = true }
libspa = { workspace = true, optional = true }

[features]
default = []
x11 = ["dep:x11rb"]
pipewire = ["dep:pipewire", "dep:libspa"]
