[package]
name = "region-ui-egui"
version = "2.0.0"
edition = "2021"

[dependencies]
region-core = { path = "../region-core" }
region-capture = { path = "../region-capture", features = ["x11"] }
region-config = { path = "../region-config" }
region-portal = { path = "../region-portal" }
eframe = "0.30"
egui = "0.30"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5", features = ["derive"] }
global-hotkey = { workspace = true }
crossbeam-channel = "0.5"
rayon = "1.10"
x11rb = { workspace = true }
rust-i18n = "3"
sys-locale = "0.3"
