[package]
name = "region-portal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
region-core = { workspace = true }
region-capture = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
