[package]
name = "region-ui-egui"
version = "2.0.0"
edition = "2021"

[dependencies]
region-core = { path = "../region-core" }
region-capture = { path = "../region-capture", features = ["x11"] }
region-config = { path = "../region-config" }
eframe = "0.30"
egui = "0.30"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
